<?xml version="1.0"?>
<package format="3">
  <name>whi_temperature_humidity</name>
  <version>2.1.0</version>
  <description>The temperature and humidity package</description>

  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
  <license>MIT</license>  

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建和运行依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>whi_interfaces</depend>
  <depend>yaml-cpp</depend>
  <depend>serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
